rest: Changed the aq_pm endpoints to just pm
