# restapi_rooms.bak/swagger_server/controllers/default_controller.py
@@ -47,7 +47,7 @@ def book_rooms_room_id_post(body, room_id):  # noqa: E501
     return post_book_room_id(body, room_id)
 
 
-def rooms_pm10_get():  # noqa: E501
+def rooms_aq_pm10_get():  # noqa: E501
     """Retrieve air quality data (pm10)
 
     Fetches the air quality measurement, including particulate matter (μg/m³) for smaller particles(i.e. pm10) for all rooms # noqa: E501
@@ -58,7 +58,7 @@ def rooms_pm10_get():  # noqa: E501
     return get_all_room_spec_sensor("pm10", 14)
 
 
-def rooms_pm2_5_get():  # noqa: E501
+def rooms_aq_pm2_5_get():  # noqa: E501
     """Retrieve air quality data (pm2.5)
 
     Fetches the air quality measurement, including particulate matter (μg/m³) for smaller particles(i.e. pm2.5) for all rooms # noqa: E501
@@ -140,7 +140,7 @@ def rooms_noise_get():  # noqa: E501
     return get_all_room_spec_sensor("noise", 14)
 
 
-def rooms_room_id_pm10_get(room_id):  # noqa: E501
+def rooms_room_id_aq_pm10_get(room_id):  # noqa: E501
     """Get air quality data for a specific room (i.e. pm10)
 
     Fetches the air quality measurements, including particulate matter (μg/m³) for smaller particles (i.e. pm10) of a single room # noqa: E501
@@ -153,7 +153,7 @@ def rooms_room_id_pm10_get(room_id):  # noqa: E501
     return get_spec_room_spec_sensor("pm10", room_id, 14)
 
 
-def rooms_room_id_pm2_5_get(room_id):  # noqa: E501
+def rooms_room_id_aq_pm2_5_get(room_id):  # noqa: E501
     """Get air quality data for a specific room (i.e. pm2.5)
 
     Fetches the air quality measurements, including particulate matter (μg/m³) for smaller particles (i.e. pm2.5) of a single room # noqa: E501
